chore: first changes before deployment

--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -68,6 +68,10 @@
   background-color: $instagram;
 }
 
+.whatsapp i {
+  background-color: $whatsapp;
+}
+
 /* Hover Transition */
 .twitter i:hover,
 .google i:hover,
