--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,8 +3,8 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #55198b;
-$buttonHover: #8c43ce;
+$buttonColor: #9FCB6A;
+$buttonHover: #9FCB6D;
 $topButtonHover: #000;
 
 // text colors light theme
@@ -69,12 +69,12 @@ $headerHoverBG: #f4f4f4;
 $contactDetailHoverTS: #b5b5b5;
 
 // misc backgrounds
-$progressBarSpanBG: #aaa5ff;
+$progressBarSpanBG: #9FCB6A;
 $iconBackground: #333;
 $appHeaderBG: #282c34;
 
 // misc colors
-$skillsColor: #645beb;
+$skillsColor: #9FCB6D;
 $appLink: #09d3ac;
 
 // social media icons
@@ -88,3 +88,4 @@ $medium: #000;
 $stackoverflow: #f48024;
 $instagram: #c13584;
 $kaggle: #20beff;
+$whatsapp: green;
